hphp/hack/test/typecheck/new_inference/tparam_where_constraint.php.like_types.exp
File "tparam_where_constraint.php", line 10, characters 5-22:
Invalid argument (Typing[4110])
File "tparam_where_constraint.php", line 3, characters 28-43:
Expected ~dict<[unresolved], string> because it is an unenforceable type
File "tparam_where_constraint.php", line 10, characters 5-22:
But got dict<string, string>
